# 3DP-DDS

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  example_wall.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: .buildinfo  architecture.md  genindex.html  getting-started.html  index.html  modeling-assumptions.md  objects.inv  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/dds/: attributes.html  chunked.html  domain.html  fields.html  occupancy.html  primitives.html  results.html  simulator.html
docs/_modules/dds/analysis/: models.html  simulation.html
docs/api/: analysis.html  core.html  fields.html  index.html  occupancy.html  primitives.html
docs/concepts/: architecture.html  coordinate-conventions.html  fields-and-thresholds.html  index.html  modeling-assumptions.html
docs/source/: conf.py  getting-started.rst  index.rst
docs/source/_templates/: layout.html
docs/source/api/: analysis.rst  core.rst  fields.rst  index.rst  occupancy.rst  primitives.rst
docs/source/concepts/: architecture.rst  coordinate-conventions.rst  fields-and-thresholds.rst  index.rst  modeling-assumptions.rst
docs/source/tutorials/: chunked-fields.rst  deposits.rst  domains-and-beads.rst  grasshopper.rst  index.rst  results-and-analysis.rst  simulation-workflows.rst
docs/tutorials/: chunked-fields.html  deposits.html  domains-and-beads.html  grasshopper.html  index.html  results-and-analysis.html  simulation-workflows.html
examples/: basic_simulation.py  live_simulation.py  yaml_simulation.py
examples/grasshopper/: README.md  component_templates.py  dds_python_components_basic.gh
scripts/: publish_docs.py
src/dds/: __init__.py  analysis.py  attributes.py  chunked.py  cli.py  domain.py  fields.py  io.py  kernels.py  mesh_analysis.py  occupancy.py  primitives.py  queries.py  results.py  simulator.py  sparse.py  targets.py  types.py  utils.py  viz.py  workbench.py
src/dds/analysis/: __init__.py  bundle.py  fields.py  interface.py  models.py  simulation.py  strata.py  support.py
src/dds/formats/: __init__.py  yaml.py
src/dds/geometry/: __init__.py  _utils.py  adapters.py  mesh.py  ops.py  point_cloud.py  primitives.py  sdf.py  shapes.py  transforms.py
src/dds/gh_helpers/: __init__.py  components.py  convert.py
src/dds/viz/: __init__.py  converters.py  styles.py  viewer.py
tests/: conftest.py  test_checkpoint.py  test_chunked.py  test_cli.py  test_docs_api_reference.py  test_documentation.py  test_geometry.py  test_gh_helpers.py  test_interface_analysis.py  test_io.py  test_live_simulation_example.py  test_mesh_analysis.py  test_pose.py  test_python39_syntax.py  test_queries.py  test_results.py  test_simulation.py  test_sparse.py  test_support_analysis.py  test_targets.py  test_viz.py  test_viz_viewer.py  test_workbench.py  test_yaml_simulation_example.py
