[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3dp-dds"
version = "0.1.0"
description = "Dense Deposition Simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "scipy>=1.10",
    "trimesh>=4.0",
    "tyro>=0.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-qt>=4.4"]
mesh = [
    "meshio>=5.3",
    "scikit-image>=0.23",
]
viz = [
    "PySide6>=6.7",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
