[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3dp-dds"
# Placeholder required by package metadata; release versioning is intentionally deferred.
version = "0.0.0"
description = "Voxel-based digital-twin simulation for robotic additive manufacturing"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Ozguc Bertug Capunaman" },
]
keywords = [
    "additive manufacturing",
    "digital twin",
    "robotics",
    "simulation",
    "voxel",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.10",
]

[project.optional-dependencies]
cli = ["tyro>=0.8"]
formats = ["pyyaml>=6.0"]
gh = ["scikit-image>=0.22"]
mesh = [
    "rtree>=1.2",
    "scikit-image>=0.22",
    "trimesh>=4.0",
]
viz = [
    "PySide6>=6.7",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "rtree>=1.2",
    "scikit-image>=0.22",
    "trimesh>=4.0",
]
all = [
    "PySide6>=6.7",
    "pyvista>=0.43",
    "pyvistaqt>=0.11",
    "pyyaml>=6.0",
    "rtree>=1.2",
    "scikit-image>=0.22",
    "trimesh>=4.0",
    "tyro>=0.8",
]

[project.urls]
Repository = "https://github.com/ozgucbertug/3DP-DDS"
Issues = "https://github.com/ozgucbertug/3DP-DDS/issues"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.mypy]
python_version = "3.9"
files = ["src/dds"]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
dds = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
